syntax = "proto3";

package common;

option java_multiple_files = true;
option java_package = "com.osc.bikas.proto";

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";


service ProductDataService {
//  rpc GetFeaturedProducts (google.protobuf.Empty) returns (ProductListResponse);
  rpc GetCategoriesOrderedByViewCount (google.protobuf.Empty) returns (CategoryListResponse);
  rpc GetProductDetails (google.protobuf.StringValue) returns (ProductDetails);
  rpc GetFilteredProducts(CategoryFilterRequest) returns (ProductListResponse);
}

message ProductDetails {
  string product_id = 1;
  string category_id = 2;
  string product_name = 3;
  string product_description = 4;
  double product_price = 5;
  int32 count = 6;
}

message ProductListResponse {
  repeated ProductDetails products = 1;
}

message Category {
  string category_id = 1;
  string category_name = 2;
  int32 count = 3;
}

message CategoryListResponse {
  repeated Category categories = 1;
}

message CategoryFilterRequest {
  enum FILTER {
    POPULAR = 0;
    LOW_TO_HIGH = 1;
    HIGH_TO_LOW = 2;
    NEW_FIRST = 3;
  }
  string category_id = 1;
  FILTER filter = 2;
}